# lingua-loop

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  api.html  db.html  example.md  exceptions.html  genindex.html  index.html  integrations.html  objects.inv  package-lock.json  py-modindex.html  pyproject.toml  schemas.html  search.html  searchindex.js  services.html
.doctrees/: api.doctree  db.doctree  environment.pickle  exceptions.doctree  index.doctree  integrations.doctree  schemas.doctree  services.doctree
.github/workflows/: ci.yml
_modules/: index.html
_modules/lingua_loop/: exceptions.html
_modules/lingua_loop/api/routers/: transcript.html
_modules/lingua_loop/db/: models.html  session.html  transcript.html
_modules/lingua_loop/integrations/youtube/: types.html  wrapper.html
_modules/lingua_loop/schemas/: transcript.html
_modules/lingua_loop/services/: text_normalization.html  transcript.html
_sources/: api.rst.txt  index.rst.txt  integrations.rst.txt
docs/: conf.py  db.rst  exceptions.rst  index.rst  schemas.rst  services.rst
src/lingua_loop/: app.py  config.py  constants.py  exceptions.py  main.py
src/lingua_loop/api/routers/: transcript.py
src/lingua_loop/api/routes/: transcript.py
src/lingua_loop/crud/: transcript.py
src/lingua_loop/db/: models.py  session.py  transcript.py
src/lingua_loop/db/models/: transcript.py
src/lingua_loop/integrations/youtube/: types.py  wrapper.py
src/lingua_loop/models/: transcript.py
src/lingua_loop/schemas/: transcript.py
src/lingua_loop/scripts/: run.py
src/lingua_loop/service/: transcript.py
src/lingua_loop/services/: text_normalization.py  transcript.py
src/lingua_loop/static/: app.js  example.js  style.css
src/lingua_loop/templates/: index.html  staging.html  video.html
tests/: config.py  conftest.py  constants.py  test_api.py  test_crud.py
tests/boundary/: conftest.py  test_youtube_transcript_api.py
tests/exploratory/: test_youtube_transcript_api.py
tests/integration/: conftest.py  test_integration.py
tests/unit/: conftest.py
tests/unit/api/: test_api.py
tests/unit/db/: conftest.py  test_db.py
tests/unit/service/: test_service.py
tests/unit/services/: test_services.py
