[project]
name = "lingua-loop"
version = "0.1.2"
description = "A web application to train your listening skills by transcribing real speech from YouTube videos."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.1",
    "sqlalchemy>=2.0.48",
    "youtube-transcript-api>=1.2.4",
]

[project.scripts]
lingua-loop = "lingua_loop.scripts.run:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lingua_loop = ["templates/*", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "build>=1.4.2",
    "prek>=0.3.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-skip-slow>=0.0.5",
    "twine>=6.2.0",
]
